# acfx

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT-NOTES.md  Makefile  README.md  ROADMAP.md  netlify.toml  tooling-feedback.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
.stack-control/: audit-barrage-config.yaml  audit-log.md  config.yaml
.stack-control/execute/: envelope-followers.ledger.jsonl  harmonic-analysis.ledger.jsonl  measurement-infrastructure.ledger.jsonl  oversampling.ledger.jsonl  saturation.ledger.jsonl  three-layer-structure.ledger.jsonl  waveshapers.ledger.jsonl
adapters/daisy/: CMakeLists.txt  daisy-main.cpp
adapters/plugin/: CMakeLists.txt  plugin-editor.cpp  plugin-editor.h  plugin-parameters.cpp  plugin-parameters.h  plugin-processor.cpp  plugin-processor.h
adapters/teensy/: CMakeLists.txt  teensy-main.cpp
adapters/web/: CMakeLists.txt  README.md  package-lock.json  package.json  svf-handle.h  svf-reference-main.cpp  svf-web-abi.cpp  svf-web-abi.h  svf-web-analysis.cpp  svf-web-analysis.h  tsconfig.json
adapters/web/analysis/: svf-analysis-wasm.ts
adapters/web/loader/: svf-module.ts
adapters/web/test/: svf-analysis.test.ts  svf-parity.test.ts  svf-web-abi-native-test.cpp  svf-worklet-engine.test.ts
adapters/web/test/vectors/: lowpass-sweep.json
adapters/web/wasm/: svf-wasm-runtime.ts
adapters/web/worklet/: svf-audio-node.ts  svf-engine-core.ts  svf-processor.ts
adapters/workbench/: CMakeLists.txt  audio-settings.cpp  audio-settings.h  audio-source.cpp  audio-source.h  harmonic-readout.cpp  harmonic-readout.h  level-meter.cpp  level-meter.h  midi-binding.h  parameter-view.cpp  parameter-view.h  source-bar.cpp  source-bar.h  workbench-app.cpp  workbench-app.h  workbench-main.cpp  workbench-persistence.cpp  workbench-persistence.h  workbench-settings.cpp  workbench-settings.h
cmake/: CPM.cmake  acfx-effect-targets.cmake  dependencies.cmake
cmake/toolchains/: daisy.cmake  teensy.cmake
core/dsp/: audio-block.h  effect.h  param-id.h  parameter.h  process-context.h  span.h
core/effects/: README.md
core/primitives/: README.md  delay-line.h  lfo.h
host/analysis/: README.md  alias-sweep.h  aliasing.h  analysis-engine.h  analyzers.h  drive-series.h  fft.h  imd.h  live-readout.h  spectrum.h  stimulus.h  thdn.h  window.h
host/processor-node/: CMakeLists.txt  processor-node.h
infra/cloudflare-cdn/: README.md  package-lock.json  package.json  tsconfig.json  worker.ts  wrangler.toml
scripts/: check-portability.sh
site/: astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
site/src/: content.config.ts
specs/component-abstractions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/compressors/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/diode-clippers/: audit-log.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/envelope-followers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/harmonic-analysis/: audit-log.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/implicit-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/measurement-infrastructure/: audit-log.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/modified-nodal-analysis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/modulated-delay/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/newton-iteration/: SC-VERIFICATION.md  audit-log.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/opamp-stages/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/oversampling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/passive-tone-stacks/: data-model.md  plan.md  quickstart.md  (+3 more)
tests/: CMakeLists.txt
tests/core/: analysis-alias-sweep-test.cpp  analysis-drive-series-test.cpp  analysis-fft-test.cpp  analysis-goertzel-parity-test.cpp  analysis-imd-test.cpp  analysis-live-offline-parity-test.cpp  analysis-spectrum-test.cpp  analysis-thdn-test.cpp  analysis-window-test.cpp  capture-probe-test.cpp  circuit-components-test.cpp  circuit-netlist-test.cpp  circuit-solver-test.cpp  compressor-effect-test.cpp  compressor-lookahead-test.cpp  compressor-makeup-link-test.cpp  compressor-no-allocation-test.cpp  compressor-sidechain-test.cpp  compressor-test.cpp  compressor-topology-test.cpp  delay-line-test.cpp  diode-clipper-builder-test.cpp  diode-clipper-invariants-test.cpp  diode-clipper-test-support.h  diode-clipper-transient-test.cpp  dynamics-modulator-test.cpp  envelope-follower-ballistics-test.cpp  envelope-follower-db-test.cpp  envelope-follower-hold-test.cpp  envelope-follower-lowfs-test.cpp  envelope-follower-rms-test.cpp  envelope-follower-test.cpp  gain-computer-test.cpp  hysteresis-solver-test.cpp  hysteresis-test-support.h  hysteresis-test.cpp  integration-closed-form-test.cpp  integration-composition-test.cpp  integration-convergence-order-test.cpp  integration-equivalence-test.cpp  (+92 more)
tests/support/: allocation-sentinel.cpp  allocation-sentinel.h  svf-reference.h
tests/support/measurement/: aliasing.h  analyzers.h  metrics.h  report.h  stimulus.h
tools/: package-lock.json  package.json  publish-assets.ts  staleness-guard.ts  tsconfig.build.json  tsconfig.json
tools/lesson-assets/: CMakeLists.txt  asset-entry.h  asset-tool-main.cpp  dft.h  fragment-writer.cpp  fragment-writer.h  json-utils.h  sha256.cpp  sha256.h  svf-asset-sweep.cpp  svf-asset-sweep.h  synthetic-source.cpp  synthetic-source.h  wav-writer.cpp  wav-writer.h
(+854 files in other folders)
